<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailWeatherActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_location"
                style="@style/TextAppearance.Material3.HeadlineLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/location"
                android:textStyle="bold" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/iv_weather"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/temperature_label"
                    android:scaleType="fitCenter"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tv_weather"
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="6dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="2"
                    android:text="@string/weather"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_date_time"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/date_time_label"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_date_time_24" />

                <TextView
                    android:id="@+id/tv_date_time"
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="6dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="2"
                    android:text="@string/date_time"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/iv_feels_like"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/feels_like_label"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_thermostat_24" />

                <TextView
                    android:id="@+id/tv_feels_like"
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"

                    android:layout_marginHorizontal="6dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="2"
                    android:text="@string/feels_like"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_temperature"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/temperature_label"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_cognition_24" />

                <TextView
                    android:id="@+id/tv_temperature"
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="6dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="2"
                    android:text="@string/temperature"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/iv_humidity"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/humidity_label"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_humidity_24" />

                <TextView
                    android:id="@+id/tv_humidity"
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="6dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="2"
                    android:text="@string/humidity"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_wind_speed"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/wind_speed_label"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_wind_speed_24" />

                <TextView
                    android:id="@+id/tv_wind_speed"
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="6dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="2"
                    android:text="@string/wind_speed"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/iv_visibility"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/visibility_label"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_visibility_24" />

                <TextView
                    android:id="@+id/tv_visibility"
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="6dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="2"
                    android:text="@string/visibility"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_cloudiness"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/cloudiness_label"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_cloudiness_24" />

                <TextView
                    android:id="@+id/tv_cloudiness"
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="6dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="2"
                    android:text="@string/cloudiness"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>